Set release version to Java 17 (#5)
* Set default release version to 17
* Enable Error prone with Nullaway
* Enable Checkstyle