@@ -16,16 +16,14 @@ final class SourceReferenceFormatter {
     Optional<String> format(SourceReference sourceReference) {
         if (sourceReference.getJavaMethod().isPresent()) {
             return sourceReference.getJavaMethod()
-                    .map(javaMethod -> String.format(
-                        "%s.%s(%s)",
+                    .map(javaMethod -> "%s.%s(%s)".formatted(
                         javaMethod.getClassName(),
                         javaMethod.getMethodName(),
                         String.join(",", javaMethod.getMethodParameterTypes())));
         }
         if (sourceReference.getJavaStackTraceElement().isPresent()) {
             return sourceReference.getJavaStackTraceElement()
-                    .map(javaStackTraceElement -> String.format(
-                        "%s.%s(%s%s)",
+                    .map(javaStackTraceElement -> "%s.%s(%s%s)".formatted(
                         javaStackTraceElement.getClassName(),
                         javaStackTraceElement.getMethodName(),
                         javaStackTraceElement.getFileName(),
